# ChangeLog for media-sound/cheesetracker
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/cheesetracker/Attic/ChangeLog,v 1.7 2004/05/31 22:44:01 kugelfang Exp $

  01 Jun 2004; Danny van Dyk <kugelfang@gentoo.org>
  +files/cheesetracker-0.9.9-64bit-clean.diff, cheesetracker-0.9.9.ebuild:
  Fixed BUG #52426.

*cheesetracker-0.9.9 (22 May 2004)

  22 May 2004; Jon Hood <squinky86@gentoo.org> +cheesetracker-0.9.9.ebuild:
  version bump, closes #49803, thanks to Priit Laes <amd@tt.ee> for the fixes

  09 May 2004; Danny van Dyk <kugelfang@gentoo.org>
  cheesetracker-0.9.1.ebuild:
  Marked ~amd64.

  29 Apr 2004; David Holm <dholm@gentoo.org> cheesetracker-0.9.1.ebuild:
  Added to ~ppc.

  14 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  cheesetracker-0.9.1.ebuild:
  Stable on x86.

  08 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  cheesetracker-0.9.1.ebuild:
  Added virtual/jack to DEPEND as an option.

*cheesetracker-0.9.1 (26 Feb 2004)

  26 Feb 2004; Jeremy Huddleston <eradicator@gentoo.org>
  cheesetracker-0.9.1.ebuild, metadata.xml:
  Cheesetracker is a portable Impulse Tracker clone. It supports all Impulse
  Tracker features except a few. Initial ebuild provided by Ben Davis
  <entheh@users.sf.net> in bug #24057.
