@@ -1,8 +1,10 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/cheesetracker/Attic/cheesetracker-0.9.9.ebuild,v 1.2 2004/05/31 22:44:01 kugelfang Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/cheesetracker/Attic/cheesetracker-0.9.9.ebuild,v 1.3 2004/06/01 16:56:26 eradicator Exp $
 
-inherit 64-bit
+IUSE="jack"
+
+inherit 64-bit eutils
 
 DESCRIPTION="A clone of Impulse Tracker with some extensions and a built-in sample editor; uses QT"
 HOMEPAGE="http://cheesetronic.sf.net/"
@@ -11,8 +13,6 @@ RESTRICT="nomirror"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86 ~ppc ~amd64"
-
-IUSE="jack"
 
 RDEPEND="jack? ( virtual/jack )
 	=dev-libs/libsigc++-1.2*
